syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "model/user.proto";
import "model/workspace.proto";

package api.v2;
option go_package = "github.com/smartmemos/memos/internal/proto/api/v2";

service WorkspaceService {
  // Gets the workspace profile.
  rpc GetWorkspaceProfile(GetWorkspaceProfileRequest) returns (model.WorkspaceProfile) {} 

  // Gets a workspace setting.
  rpc GetWorkspaceSetting(GetWorkspaceSettingRequest) returns (model.WorkspaceSetting) {}

  // Updates a workspace setting.
  rpc UpdateWorkspaceSetting(UpdateWorkspaceSettingRequest) returns (model.WorkspaceSetting) {}
}

// Request for workspace profile.
message GetWorkspaceProfileRequest {}

// Request message for GetWorkspaceSetting method.
message GetWorkspaceSettingRequest {
  // The resource name of the workspace setting.
  // Format: workspace/settings/{setting}
  string name = 1;
}

// Request message for UpdateWorkspaceSetting method.
message UpdateWorkspaceSettingRequest {
  // The workspace setting resource which replaces the resource on the server.
  model.WorkspaceSetting setting = 1;

  // The list of fields to update.
  google.protobuf.FieldMask update_mask = 2;
}
